# MTL_fall_detection

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  run_experiment.py
configs/: dataset.yaml  eval.yaml  model.yaml  train.yaml
configs/experiments/: mvs_baseline_st_adl.yaml  mvs_baseline_st_fall.yaml  mvs_mtl_gradnorm.yaml  mvs_mtl_shared_05_05.yaml  mvs_mtl_uncertainty.yaml
data/: dataset.py
data_ingest/: csv_reader_fixed.py  dataset_discovery.py  dataset_processor_complete.py  filename_parser.py  safe_unzip.py  schema_inference.py  test_csv_reading.py
docs/: DATA_CARD.md  MODEL_CARD.md
eval/: __init__.py  adl_metrics.py  fall_metrics.py  threshold_optimization.py  visualization.py
inference/: streaming.py
models/: __init__.py  heads.py  losses.py  model_factory.py  mtl_model.py
preprocessing/: __init__.py  advanced_augmentation.py  augmentation.py  filtering.py  windowing.py
scripts/: analyze_errors.py  evaluate.py  hyperopt.py  prepare_data.py  prepare_data_gdrive.py  prepare_data_integrated.py  run_experiments.sh  test_csv_reading.py  train.py  verify_run.py
splits/: __init__.py  leakage_validator.py  manifest_reader.py  manifest_writer.py
tests/: test_losses.py  test_model.py  test_models.py  test_parsing.py  test_samplers.py  test_splits.py  test_windowing.py
training/: __init__.py  distributed_trainer.py  evaluator.py  losses.py  optimizers.py  samplers.py  schedulers.py  trainer.py
